# axon-main

./: .env.example  .gitignore  AGENT.md  AGENTS.md  IMPLEMENT.md  PHASE4_SUMMARY.md  PROJECT_PLAN.md  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.deepseek/: instructions.md
agents/: executive_agent.py  planning_manager.py
archetecture/: README.md  axon_architecture.excalidraw
archives/v0.0.1/: AGENT.md  LICENSE  PROJECTPLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
archives/v0.0.1/adapters/: __init__.py  mcp_client.py
archives/v0.0.1/adapters/dynamics365/: __init__.py
archives/v0.0.1/adapters/legacy_db/: __init__.py
archives/v0.0.1/adapters/mapping/: __init__.py  dynamics365.py  legacy_db.py  netsuite.py  odoo.py  oracle_ebs.py  sap.py
archives/v0.0.1/adapters/oracle_ebs/: __init__.py
archives/v0.0.1/adapters/sap/: __init__.py
archives/v0.0.1/agents/: __init__.py  executive.py  planning.py  supervisor.py
archives/v0.0.1/agents/finance/: __init__.py  budget_validator.py  costing.py
archives/v0.0.1/agents/logistics/: __init__.py  distribution.py
archives/v0.0.1/agents/maintenance/: __init__.py  breakdown_response.py  pm_scheduler.py
archives/v0.0.1/agents/pd/: __init__.py  bom_impact.py
archives/v0.0.1/agents/production/: __init__.py  mps.py  reschedule.py
archives/v0.0.1/agents/purchase/: __init__.py  buyer.py  director.py  manager.py
archives/v0.0.1/agents/qa/: __init__.py  compliance_guardrail.py
archives/v0.0.1/agents/qc/: __init__.py  inspection.py
archives/v0.0.1/agents/sales/: __init__.py  atp.py  demand_forecasting.py
archives/v0.0.1/axon_ascp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
archives/v0.0.1/core/: config.py  model_factory.py  odoo_client.py
archives/v0.0.1/core/protocols/: __init__.py
archives/v0.0.1/core/schema/: __init__.py  allocation.py  demand.py  finance.py  logistics.py  maintenance.py  production.py  quality.py  supply.py
archives/v0.0.1/core/skills/: base_skill.py  communication_skills.py  impact_analysis_skill.py  inventory_skills.py  planning_skills.py  procurement_skills.py  sales_skills.py
archives/v0.0.1/mcp_servers/dynamics365/: server.py
archives/v0.0.1/mcp_servers/legacy_db/: server.py
archives/v0.0.1/mcp_servers/netsuite/: server.py
archives/v0.0.1/mcp_servers/odoo/finance/: __init__.py  server.py
archives/v0.0.1/mcp_servers/odoo/inventory/: server.py
archives/v0.0.1/mcp_servers/odoo/logistics/: __init__.py  server.py
archives/v0.0.1/mcp_servers/odoo/maintenance/: __init__.py  server.py
archives/v0.0.1/mcp_servers/odoo/pd/: __init__.py  server.py
archives/v0.0.1/mcp_servers/odoo/planning/: server.py
archives/v0.0.1/mcp_servers/odoo/procurement/: server.py
archives/v0.0.1/mcp_servers/odoo/production/: __init__.py  server.py
archives/v0.0.1/mcp_servers/odoo/qa/: __init__.py  server.py
archives/v0.0.1/mcp_servers/odoo/qc/: __init__.py  server.py
archives/v0.0.1/mcp_servers/odoo/sales/: __init__.py  server.py
archives/v0.0.1/mcp_servers/oracle_ebs/: server.py
archives/v0.0.1/mcp_servers/sap/: server.py
archives/v0.0.1/orchestrator/: state.py
archives/v0.0.1/orchestrator/graphs/: main.py  production.py  purchase.py  qc.py
archives/v0.0.1/orchestrator/nodes/: __init__.py
archives/v0.0.1/tests/: test_integration.py
core/: config.py  odoo_client.py
docs/: architecture.md  mcp-tools.md  operational-workflow.md
tests/: mocks.py  (+11 more)
(+213 files in other folders)
