[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon"
version = "0.0.2"
description = "Agentic Supply Chain Planning — Pure MCP Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "nsanguan"}
]
keywords = ["supply-chain", "mcp", "agentic-ai", "planning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.8.0,<3",
    "pydantic-settings>=2.5.0",
    "pydantic-ai>=0.0.12",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "mcp>=1.4.0",
    "httpx>=0.28.0",
    "logfire>=0.45.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[project.scripts]
axon-sim = "axon.sim.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.6.0",
    "mypy>=1.12.0",
    "pyright>=1.1.390",
    "pre-commit>=3.8.0",
    "hypothesis>=6.100.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 120
